--- a/test/memory.yml
+++ b/test/memory.yml
@@ -1,27 +1,15 @@
-# Counter data structure's abstract definition
+# Memory data structure's abstract definition
 
 name: memory
 
 preamble: |
   (declare-sort E 0)
-  (declare-sort F 0)
 
 state:
   - name: varnames
     type: (Set E)
   - name: contents
     type: (Array E Int)
-
-# states_equal:
-#   definition: (= contents_1 contents_2)
-
-state:
-  - name: keys
-    type: (Set E)
-  - name: H
-    type: (Array E F)
-  - name: size
-    type: Int
 
 states_equal:
   definition: |
@@ -31,7 +19,7 @@ states_equal:
 methods:
   - name: read
     args:
-      - name: x
+      - name: x0
         type: E
     return:
       - name: result
@@ -41,12 +29,15 @@ methods:
     ensures: |
       (and (= contents_new contents)
            (= varnames_new varnames)
-           (= result (select contents x))
+           (= result (select contents x0)))
     terms:
-      Int: [contents, result, varnames]
+      Int: [(select contents $1)]
+      E: [$1]
+      (Set E): [varnames, (singleton $1), (setminus varnames (singleton $1))]
+      (Array E Int): [contents]
   - name: write
     args:
-      - name: x
+      - name: x0
         type: E
       - name: v
         type: Int
@@ -56,18 +47,30 @@ methods:
     requires: |
       true
     ensures: |
-      (ite (member x varnames)
+      (ite (member x0 varnames)
            (and result
                 (= varnames_new varnames)
-                (ite (= v (select contents x))
+                (ite (= v (select contents x0))
                      (= contents_new contents)
-                     (= contents_new (store contents x v))))
+                     (= contents_new (store contents x0 v))))
             (and result
-                 (= varnames_new (insert x varnames))
-                 (= contents_new (store contents x v))))
+                 (= varnames_new (insert x0 varnames))
+                 (= contents_new (store contents x0 v))))
     terms:
-      Int: [contents, 1, (- contents 1), 0]
+      Int: [$2, (select contents $1)]
+      E: [$1]
+      (Set E): [varnames, (singleton $1), (setminus varnames (singleton $1))]
+      (Array E Int): [contents]
+#      Int: [contents]
 
 predicates:
   - name: "="
     type: [Int, Int]
+  - name: "="
+    type: [E, E]
+  - name: "="
+    type: [(Set E), (Set E)]
+  - name: "="
+    type: [(Array E Int), (Array E Int)]
+  - name: "member"
+    type: [E, (Set E)]
