--- a/test/lockmem.yml
+++ b/test/lockmem.yml
@@ -2,6 +2,15 @@
 #   Every memory cell also has a corresponding lock
 # Read rather than try read.
 
+#  unlock(x1=tid,x2=var) can move to the left of write(y1=tid, y2=var, y3=v)
+#  whenever
+#  (and
+#    (= x2 y2)                                             ; same variable
+#    (= x1 (and (first (select var2locks x2))              ; lock is held 
+#               (= x1 (second (select var2locks x2)))))    ;  .. by unlocker
+#    (not (= x1 y1))                                       ; different threads
+#  )
+
 name: lockmem
 
 preamble: |
